--- a/ray-core/02-TaskParallelism-Part1.ipynb
+++ b/ray-core/02-TaskParallelism-Part1.ipynb
@@ -76,7 +76,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n:  2, duration:  2.001 seconds\n"
+      "n:  2, duration:  2.004 seconds\n"
      ]
     }
    ],
@@ -104,10 +104,10 @@
      "output_type": "stream",
      "text": [
       "n:  0, duration:  0.000 seconds\n",
-      "n:  1, duration:  1.003 seconds\n",
-      "n:  2, duration:  2.004 seconds\n",
-      "n:  3, duration:  3.003 seconds\n",
-      "n:  4, duration:  4.004 seconds\n",
+      "n:  1, duration:  1.005 seconds\n",
+      "n:  2, duration:  2.003 seconds\n",
+      "n:  3, duration:  3.004 seconds\n",
+      "n:  4, duration:  4.002 seconds\n",
       "Total time: duration: 10.016 seconds\n"
      ]
     }
@@ -160,19 +160,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-04-06 13:21:47,175\tINFO resource_spec.py:204 -- Starting Ray with 4.15 GiB memory available for workers and up to 2.09 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
-      "2020-04-06 13:21:47,521\tINFO services.py:1146 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8265\u001b[39m\u001b[22m\n"
+      "2020-04-10 13:51:00,098\tINFO resource_spec.py:204 -- Starting Ray with 4.54 GiB memory available for workers and up to 2.28 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
+      "2020-04-10 13:51:00,445\tINFO services.py:1146 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8266\u001b[39m\u001b[22m\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "{'node_ip_address': '192.168.1.149',\n",
-       " 'redis_address': '192.168.1.149:17200',\n",
-       " 'object_store_address': '/tmp/ray/session_2020-04-06_13-21-47_165151_28768/sockets/plasma_store',\n",
-       " 'raylet_socket_name': '/tmp/ray/session_2020-04-06_13-21-47_165151_28768/sockets/raylet',\n",
-       " 'webui_url': 'localhost:8265',\n",
-       " 'session_dir': '/tmp/ray/session_2020-04-06_13-21-47_165151_28768'}"
+       " 'redis_address': '192.168.1.149:62372',\n",
+       " 'object_store_address': '/tmp/ray/session_2020-04-10_13-51-00_090607_57221/sockets/plasma_store',\n",
+       " 'raylet_socket_name': '/tmp/ray/session_2020-04-10_13-51-00_090607_57221/sockets/raylet',\n",
+       " 'webui_url': 'localhost:8266',\n",
+       " 'session_dir': '/tmp/ray/session_2020-04-10_13-51-00_090607_57221'}"
       ]
      },
      "execution_count": 7,
@@ -260,11 +260,11 @@
      "output_type": "stream",
      "text": [
       "n:  0, duration:  0.000 seconds\n",
-      "n:  1, duration:  1.002 seconds\n",
-      "n:  2, duration:  2.000 seconds\n",
-      "n:  3, duration:  3.003 seconds\n",
-      "n:  4, duration:  4.003 seconds\n",
-      "Total time: duration: 10.024 seconds\n"
+      "n:  1, duration:  1.003 seconds\n",
+      "n:  2, duration:  2.005 seconds\n",
+      "n:  3, duration:  3.002 seconds\n",
+      "n:  4, duration:  4.005 seconds\n",
+      "Total time: duration: 10.856 seconds\n"
      ]
     }
    ],
@@ -290,25 +290,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n:  0, duration:  0.001 seconds\n",
+      "n:  0, duration:  0.000 seconds\n",
       "n:  1, duration:  0.001 seconds\n",
       "n:  2, duration:  0.001 seconds\n",
       "n:  3, duration:  0.002 seconds\n",
-      "n:  4, duration:  0.002 seconds\n",
+      "n:  4, duration:  0.003 seconds\n",
       "Calling ray.get:\n",
       "n:  0, duration:  0.000 seconds\n",
       "n:  1, duration:  1.004 seconds\n",
-      "n:  2, duration:  2.005 seconds\n",
-      "n:  3, duration:  3.005 seconds\n",
+      "n:  2, duration:  2.000 seconds\n",
+      "n:  3, duration:  3.003 seconds\n",
       "n:  4, duration:  4.005 seconds\n",
-      "Total time: duration:  4.009 seconds\n"
+      "Total time: duration:  4.011 seconds\n"
      ]
     }
    ],
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -355,10 +355,10 @@
      "text": [
       "n:  0, duration:  0.000 seconds\n",
       "n:  1, duration:  1.003 seconds\n",
-      "n:  2, duration:  2.004 seconds\n",
-      "n:  3, duration:  3.005 seconds\n",
-      "n:  4, duration:  4.004 seconds\n",
-      "Total time: duration:  4.009 seconds\n"
+      "n:  2, duration:  2.003 seconds\n",
+      "n:  3, duration:  3.002 seconds\n",
+      "n:  4, duration:  4.001 seconds\n",
+      "Total time: duration:  4.006 seconds\n"
      ]
     }
    ],
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,18 +405,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "ename": "AssertionError",
-     "evalue": "Did you exploit Ray parallelism? The duration is too long: 5.0",
+     "evalue": "Did you exploit Ray parallelism? The duration is too long: 6.006225824356079 seconds",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-a584b8855d2e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0msquares\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf'Did you retrieve the objects using the ids? squares = {squares}'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mduration\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m5.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mduration\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m4.1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf'Did you exploit Ray parallelism? The duration is too long: {duration}'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m: Did you exploit Ray parallelism? The duration is too long: 5.0"
+      "\u001b[0;32m<ipython-input-14-192e039ff7d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0msquares\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf'Did you retrieve the objects using the ids? squares = {squares}'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mduration\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m4.1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf'Did you exploit Ray parallelism? The duration is too long: {duration} seconds'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m: Did you exploit Ray parallelism? The duration is too long: 6.006225824356079 seconds"
      ]
     }
    ],
@@ -443,28 +443,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'NodeID': 'ed4be22c694e77af122349d9c879ecb72114c7d3',\n",
+       "[{'NodeID': '789e6d45af040d05151e09d8152fe7f8365cf7d3',\n",
        "  'Alive': True,\n",
        "  'NodeManagerAddress': '192.168.1.149',\n",
        "  'NodeManagerHostname': 'DWAnyscaleMBP.local',\n",
-       "  'NodeManagerPort': 56315,\n",
-       "  'ObjectManagerPort': 56346,\n",
-       "  'ObjectStoreSocketName': '/tmp/ray/session_2020-04-06_13-21-47_165151_28768/sockets/plasma_store',\n",
-       "  'RayletSocketName': '/tmp/ray/session_2020-04-06_13-21-47_165151_28768/sockets/raylet',\n",
-       "  'Resources': {'object_store_memory': 29.0,\n",
+       "  'NodeManagerPort': 51486,\n",
+       "  'ObjectManagerPort': 51525,\n",
+       "  'ObjectStoreSocketName': '/tmp/ray/session_2020-04-10_13-51-00_090607_57221/sockets/plasma_store',\n",
+       "  'RayletSocketName': '/tmp/ray/session_2020-04-10_13-51-00_090607_57221/sockets/raylet',\n",
+       "  'Resources': {'object_store_memory': 32.0,\n",
        "   'CPU': 8.0,\n",
        "   'node:192.168.1.149': 1.0,\n",
-       "   'memory': 85.0},\n",
+       "   'memory': 93.0},\n",
        "  'alive': True}]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,28 +477,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'NodeID': 'ed4be22c694e77af122349d9c879ecb72114c7d3',\n",
+       "{'NodeID': '789e6d45af040d05151e09d8152fe7f8365cf7d3',\n",
        " 'Alive': True,\n",
        " 'NodeManagerAddress': '192.168.1.149',\n",
        " 'NodeManagerHostname': 'DWAnyscaleMBP.local',\n",
-       " 'NodeManagerPort': 56315,\n",
-       " 'ObjectManagerPort': 56346,\n",
-       " 'ObjectStoreSocketName': '/tmp/ray/session_2020-04-06_13-21-47_165151_28768/sockets/plasma_store',\n",
-       " 'RayletSocketName': '/tmp/ray/session_2020-04-06_13-21-47_165151_28768/sockets/raylet',\n",
-       " 'Resources': {'object_store_memory': 29.0,\n",
+       " 'NodeManagerPort': 51486,\n",
+       " 'ObjectManagerPort': 51525,\n",
+       " 'ObjectStoreSocketName': '/tmp/ray/session_2020-04-10_13-51-00_090607_57221/sockets/plasma_store',\n",
+       " 'RayletSocketName': '/tmp/ray/session_2020-04-10_13-51-00_090607_57221/sockets/raylet',\n",
+       " 'Resources': {'object_store_memory': 32.0,\n",
        "  'CPU': 8.0,\n",
        "  'node:192.168.1.149': 1.0,\n",
-       "  'memory': 85.0},\n",
+       "  'memory': 93.0},\n",
        " 'alive': True}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,19 +510,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'object_store_memory': 29.0,\n",
+       "{'object_store_memory': 32.0,\n",
        " 'CPU': 8.0,\n",
        " 'node:192.168.1.149': 1.0,\n",
-       " 'memory': 85.0}"
+       " 'memory': 93.0}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
        "8.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,47 +564,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n:  0, duration:  0.001 seconds\n",
-      "n:  1, duration:  0.001 seconds\n",
-      "n:  2, duration:  0.002 seconds\n",
-      "n:  3, duration:  0.002 seconds\n",
-      "n:  4, duration:  0.003 seconds\n",
-      "n:  5, duration:  0.003 seconds\n",
-      "n:  6, duration:  0.003 seconds\n",
-      "n:  7, duration:  0.004 seconds\n",
-      "n:  8, duration:  0.004 seconds\n",
-      "n:  9, duration:  0.005 seconds\n",
-      "n: 10, duration:  0.005 seconds\n",
-      "n: 11, duration:  0.005 seconds\n",
-      "n: 12, duration:  0.005 seconds\n",
-      "n: 13, duration:  0.006 seconds\n",
-      "n: 14, duration:  0.006 seconds\n",
-      "n: 15, duration:  0.006 seconds\n",
-      "Calling ray.get:\n",
-      "n:  0, duration:  0.000 seconds\n",
-      "n:  1, duration:  1.005 seconds\n",
-      "n:  2, duration:  2.005 seconds\n",
-      "n:  3, duration:  3.004 seconds\n",
-      "n:  4, duration:  4.004 seconds\n",
-      "n:  5, duration:  5.003 seconds\n",
-      "n:  6, duration:  6.003 seconds\n",
-      "n:  7, duration:  7.004 seconds\n",
-      "n:  8, duration:  8.004 seconds\n",
-      "n:  9, duration:  9.004 seconds\n",
-      "n: 10, duration: 10.004 seconds\n",
-      "n: 11, duration: 11.002 seconds\n",
-      "n: 12, duration: 12.004 seconds\n",
-      "n: 13, duration: 13.003 seconds\n",
-      "n: 14, duration: 13.999 seconds\n",
-      "n: 15, duration: 15.000 seconds\n",
-      "Total time: duration: 22.013 seconds\n"
+      "n:  0, duration:  0.003 seconds\n",
+      "n:  1, duration:  0.004 seconds\n",
+      "n:  2, duration:  0.004 seconds\n",
+      "n:  3, duration:  0.005 seconds\n",
+      "n:  4, duration:  0.006 seconds\n",
+      "n:  5, duration:  0.007 seconds\n",
+      "n:  6, duration:  0.007 seconds\n",
+      "n:  7, duration:  0.009 seconds\n",
+      "n:  8, duration:  0.010 seconds\n",
+      "n:  9, duration:  0.011 seconds\n",
+      "n: 10, duration:  0.011 seconds\n",
+      "n: 11, duration:  0.012 seconds\n",
+      "n: 12, duration:  0.013 seconds\n",
+      "n: 13, duration:  0.015 seconds\n",
+      "n: 14, duration:  0.015 seconds\n",
+      "n: 15, duration:  0.015 seconds\n",
+      "Calling ray.get:\n"
      ]
     }
    ],
