Added language for using Colab. Refined images

--- a/ray-core/01-Introduction.ipynb
+++ b/ray-core/01-Introduction.ipynb
@@ -82,8 +82,7 @@
    "source": [
     "The core Ray system, which we'll explore in this module, provides the cluster-wide scheduling of work (which we'll call _tasks_) and management of _distributed state_, another important requirement in real-world distributed systems.\n",
     "\n",
-    "On top of Ray, a growing family of domain-specific libraries support many of the functions we've discussed, like the ones shown in the following image:\n",
-    "![Ray across the board](../images/ML-Landscape-Ray-Libraries.png)"
+    "On top of Ray, a growing family of domain-specific libraries support many of the functions we've discussed, like the ones shown in the image. Other tutorial modules in this repo explore those libraries."
    ]
   },
   {
@@ -121,13 +120,6 @@
     "    * [@raydistributed](https://twitter.com/raydistributed)\n",
     "    * [@anyscalecompute](https://twitter.com/anyscalecompute)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -146,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
