--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -42,13 +42,22 @@
     "\n",
     "Once you've completed the Ray core material, you can explore the rest of the modules in any order.\n",
     "\n",
-    "| Lesson | Description |\n",
-    "| :----- | :---------- |\n",
-    "| [01 Introduction](ray-core/01-Introduction.ipynb) | Start in this notebook, which introduces Ray. |\n",
-    "| [02 Task Parallelism - Part1](ray-core/02-TaskParallelism-Part1.ipynb) | Part 1 of the introduction to several of the Ray API calls and how to use them to turn synchronous python _functions_ into asynchronous Ray _tasks_. |\n",
-    "| [03 Task Parallelism - Part2](ray-core/03-TaskParallelism-Part2.ipynb) | Part 2 of the exploration of Ray _tasks_. |\n",
-    "| [04 Distributed State with Actors](ray-core/04-DistributedStateWithActors.ipynb) | Ray _actors_ are the asynchronous analog of Python classes, used to extend the concept of a _task_ to support management of distributed state. |\n",
-    "| [05 Exploring Ray API Calls](ray-core/05-ExploringRayAPICalls.ipynb) | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional module. We'll also look at options you can pass to the API calls we've already learned. |"
+    "| Lesson | Open in Colab | Description |\n",
+    "| :----- | :------------ | :---------- |\n",
+    "| [01 Introduction](ray-core/01-Introduction.ipynb) | <a href=\"https://colab.research.google.com/github/anyscale/academy/blob/master/ray-core/01-Introduction.ipynb\" target=\"_01-Introduction\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Ray Tutorial - 01-Introduction\"/></a> | Start in this notebook, which introduces Ray. |\n",
+    "| [02 Task Parallelism - Part1](ray-core/02-TaskParallelism-Part1.ipynb) | <a href=\"https://colab.research.google.com/github/anyscale/academy/blob/master/ray-core/02-TaskParallelism-Part1.ipynb\" target=\"_02-TaskParallelism-Part1\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Ray Tutorial - 02-TaskParallelism-Part1\"/></a> | Part 1 of the introduction to several of the Ray API calls and how to use them to turn synchronous python _functions_ into asynchronous Ray _tasks_. |\n",
+    "| [03 Task Parallelism - Part2](ray-core/03-TaskParallelism-Part2.ipynb) | <a href=\"https://colab.research.google.com/github/anyscale/academy/blob/master/ray-core/03-TaskParallelism-Part2.ipynb\" target=\"_03-TaskParallelism-Part2\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Ray Tutorial - 03-TaskParallelism-Part2\"/></a> | Part 2 of the exploration of Ray _tasks_. |\n",
+    "| [04 Distributed State with Actors](ray-core/04-DistributedStateWithActors.ipynb) | <a href=\"https://colab.research.google.com/github/anyscale/academy/blob/master/ray-core/04-DistributedStateWithActors.ipynb\" target=\"_04-DistributedStateWithActors\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Ray Tutorial - 04-DistributedStateWithActors\"/></a> | Ray _actors_ are the asynchronous analog of Python classes, used to extend the concept of a _task_ to support management of distributed state. |\n",
+    "| [05 Exploring Ray API Calls](ray-core/05-ExploringRayAPICalls.ipynb) | <a href=\"https://colab.research.google.com/github/anyscale/academy/blob/master/ray-core/05-ExploringRayAPICalls.ipynb\" target=\"_05-ExploringRayAPICalls\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Ray Tutorial - 05-ExploringRayAPICalls\"/></a> | The Ray API has other API calls for more advanced scenarios, which are surveyed in this optional module. We'll also look at options you can pass to the API calls we've already learned. |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/anyscale/academy/blob/master/ray-core/01-Introduction.ipynb\" target=\"_01-Introduction\">\n",
+    "<img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Ray Tutorial - 01 Introduction\"/>\n",
+    "</a>\n"
    ]
   },
   {
@@ -120,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
