--- a/ray-core/02-TaskParallelism-Part1.ipynb
+++ b/ray-core/02-TaskParallelism-Part1.ipynb
@@ -24,7 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If you are running on Google Colab, uncomment and run the following linkes\n",
+    "# to install the necessary dependencies.\n",
+    "\n",
+    "# print(\"Setting up colab environment\")\n",
+    "# !pip install -q ray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -104,11 +117,11 @@
      "output_type": "stream",
      "text": [
       "n:  0, duration:  0.000 seconds\n",
-      "n:  1, duration:  1.005 seconds\n",
-      "n:  2, duration:  2.003 seconds\n",
-      "n:  3, duration:  3.004 seconds\n",
-      "n:  4, duration:  4.002 seconds\n",
-      "Total time: duration: 10.016 seconds\n"
+      "n:  1, duration:  1.003 seconds\n",
+      "n:  2, duration:  2.001 seconds\n",
+      "n:  3, duration:  3.002 seconds\n",
+      "n:  4, duration:  4.005 seconds\n",
+      "Total time: duration: 10.012 seconds\n"
      ]
     }
    ],
@@ -131,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,29 +166,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-04-10 13:51:00,098\tINFO resource_spec.py:204 -- Starting Ray with 4.54 GiB memory available for workers and up to 2.28 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
-      "2020-04-10 13:51:00,445\tINFO services.py:1146 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8266\u001b[39m\u001b[22m\n"
+      "2020-04-11 12:00:03,746\tINFO resource_spec.py:212 -- Starting Ray with 4.64 GiB memory available for workers and up to 2.34 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
+      "2020-04-11 12:00:04,262\tINFO services.py:1148 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8265\u001b[39m\u001b[22m\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "{'node_ip_address': '192.168.1.149',\n",
-       " 'redis_address': '192.168.1.149:62372',\n",
-       " 'object_store_address': '/tmp/ray/session_2020-04-10_13-51-00_090607_57221/sockets/plasma_store',\n",
-       " 'raylet_socket_name': '/tmp/ray/session_2020-04-10_13-51-00_090607_57221/sockets/raylet',\n",
-       " 'webui_url': 'localhost:8266',\n",
-       " 'session_dir': '/tmp/ray/session_2020-04-10_13-51-00_090607_57221'}"
+       " 'redis_address': '192.168.1.149:60670',\n",
+       " 'object_store_address': '/tmp/ray/session_2020-04-11_12-00-03_735188_92532/sockets/plasma_store',\n",
+       " 'raylet_socket_name': '/tmp/ray/session_2020-04-11_12-00-03_735188_92532/sockets/raylet',\n",
+       " 'webui_url': 'localhost:8265',\n",
+       " 'session_dir': '/tmp/ray/session_2020-04-11_12-00-03_735188_92532'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +247,7 @@
        "ObjectID(45b95b1c8bd3a9c4ffffffff010000c801000000)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -261,10 +274,10 @@
      "text": [
       "n:  0, duration:  0.000 seconds\n",
       "n:  1, duration:  1.003 seconds\n",
-      "n:  2, duration:  2.005 seconds\n",
-      "n:  3, duration:  3.002 seconds\n",
-      "n:  4, duration:  4.005 seconds\n",
-      "Total time: duration: 10.856 seconds\n"
+      "n:  2, duration:  2.001 seconds\n",
+      "n:  3, duration:  3.004 seconds\n",
+      "n:  4, duration:  4.004 seconds\n",
+      "Total time: duration: 10.029 seconds\n"
      ]
     }
    ],
@@ -290,25 +303,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n:  0, duration:  0.000 seconds\n",
-      "n:  1, duration:  0.001 seconds\n",
-      "n:  2, duration:  0.001 seconds\n",
-      "n:  3, duration:  0.002 seconds\n",
-      "n:  4, duration:  0.003 seconds\n",
+      "n:  0, duration:  0.002 seconds\n",
+      "n:  1, duration:  0.003 seconds\n",
+      "n:  2, duration:  0.004 seconds\n",
+      "n:  3, duration:  0.005 seconds\n",
+      "n:  4, duration:  0.009 seconds\n",
       "Calling ray.get:\n",
       "n:  0, duration:  0.000 seconds\n",
       "n:  1, duration:  1.004 seconds\n",
-      "n:  2, duration:  2.000 seconds\n",
-      "n:  3, duration:  3.003 seconds\n",
-      "n:  4, duration:  4.005 seconds\n",
-      "Total time: duration:  4.011 seconds\n"
+      "n:  2, duration:  2.002 seconds\n",
+      "n:  3, duration:  3.001 seconds\n",
+      "n:  4, duration:  4.002 seconds\n",
+      "Total time: duration:  4.015 seconds\n"
      ]
     }
    ],
@@ -346,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -354,10 +367,10 @@
      "output_type": "stream",
      "text": [
       "n:  0, duration:  0.000 seconds\n",
-      "n:  1, duration:  1.003 seconds\n",
-      "n:  2, duration:  2.003 seconds\n",
-      "n:  3, duration:  3.002 seconds\n",
-      "n:  4, duration:  4.001 seconds\n",
+      "n:  1, duration:  1.000 seconds\n",
+      "n:  2, duration:  2.005 seconds\n",
+      "n:  3, duration:  3.000 seconds\n",
+      "n:  4, duration:  4.003 seconds\n",
       "Total time: duration:  4.006 seconds\n"
      ]
     }
@@ -383,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,18 +418,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "ename": "AssertionError",
-     "evalue": "Did you exploit Ray parallelism? The duration is too long: 6.006225824356079 seconds",
+     "evalue": "Did you exploit Ray parallelism? The duration is too long: 6.006669759750366 seconds",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-192e039ff7d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0msquares\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf'Did you retrieve the objects using the ids? squares = {squares}'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mduration\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m4.1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf'Did you exploit Ray parallelism? The duration is too long: {duration} seconds'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m: Did you exploit Ray parallelism? The duration is too long: 6.006225824356079 seconds"
+      "\u001b[0;32m<ipython-input-16-192e039ff7d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0msquares\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf'Did you retrieve the objects using the ids? squares = {squares}'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mduration\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m4.1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf'Did you exploit Ray parallelism? The duration is too long: {duration} seconds'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m: Did you exploit Ray parallelism? The duration is too long: 6.006669759750366 seconds"
      ]
     }
    ],
@@ -443,28 +456,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'NodeID': '789e6d45af040d05151e09d8152fe7f8365cf7d3',\n",
+       "[{'NodeID': '584eb2d58f49e7fb7c6a6f8c2608b2b8c646700c',\n",
        "  'Alive': True,\n",
        "  'NodeManagerAddress': '192.168.1.149',\n",
        "  'NodeManagerHostname': 'DWAnyscaleMBP.local',\n",
-       "  'NodeManagerPort': 51486,\n",
-       "  'ObjectManagerPort': 51525,\n",
-       "  'ObjectStoreSocketName': '/tmp/ray/session_2020-04-10_13-51-00_090607_57221/sockets/plasma_store',\n",
-       "  'RayletSocketName': '/tmp/ray/session_2020-04-10_13-51-00_090607_57221/sockets/raylet',\n",
-       "  'Resources': {'object_store_memory': 32.0,\n",
+       "  'NodeManagerPort': 50735,\n",
+       "  'ObjectManagerPort': 50774,\n",
+       "  'ObjectStoreSocketName': '/tmp/ray/session_2020-04-11_12-00-03_735188_92532/sockets/plasma_store',\n",
+       "  'RayletSocketName': '/tmp/ray/session_2020-04-11_12-00-03_735188_92532/sockets/raylet',\n",
+       "  'Resources': {'object_store_memory': 33.0,\n",
        "   'CPU': 8.0,\n",
        "   'node:192.168.1.149': 1.0,\n",
-       "   'memory': 93.0},\n",
+       "   'memory': 95.0},\n",
        "  'alive': True}]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,28 +490,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'NodeID': '789e6d45af040d05151e09d8152fe7f8365cf7d3',\n",
+       "{'NodeID': '584eb2d58f49e7fb7c6a6f8c2608b2b8c646700c',\n",
        " 'Alive': True,\n",
        " 'NodeManagerAddress': '192.168.1.149',\n",
        " 'NodeManagerHostname': 'DWAnyscaleMBP.local',\n",
-       " 'NodeManagerPort': 51486,\n",
-       " 'ObjectManagerPort': 51525,\n",
-       " 'ObjectStoreSocketName': '/tmp/ray/session_2020-04-10_13-51-00_090607_57221/sockets/plasma_store',\n",
-       " 'RayletSocketName': '/tmp/ray/session_2020-04-10_13-51-00_090607_57221/sockets/raylet',\n",
-       " 'Resources': {'object_store_memory': 32.0,\n",
+       " 'NodeManagerPort': 50735,\n",
+       " 'ObjectManagerPort': 50774,\n",
+       " 'ObjectStoreSocketName': '/tmp/ray/session_2020-04-11_12-00-03_735188_92532/sockets/plasma_store',\n",
+       " 'RayletSocketName': '/tmp/ray/session_2020-04-11_12-00-03_735188_92532/sockets/raylet',\n",
+       " 'Resources': {'object_store_memory': 33.0,\n",
        "  'CPU': 8.0,\n",
        "  'node:192.168.1.149': 1.0,\n",
-       "  'memory': 93.0},\n",
+       "  'memory': 95.0},\n",
        " 'alive': True}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,19 +523,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'object_store_memory': 32.0,\n",
+       "{'object_store_memory': 33.0,\n",
        " 'CPU': 8.0,\n",
        " 'node:192.168.1.149': 1.0,\n",
-       " 'memory': 93.0}"
+       " 'memory': 95.0}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +556,7 @@
        "8.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,30 +577,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n:  0, duration:  0.003 seconds\n",
-      "n:  1, duration:  0.004 seconds\n",
-      "n:  2, duration:  0.004 seconds\n",
-      "n:  3, duration:  0.005 seconds\n",
-      "n:  4, duration:  0.006 seconds\n",
-      "n:  5, duration:  0.007 seconds\n",
-      "n:  6, duration:  0.007 seconds\n",
-      "n:  7, duration:  0.009 seconds\n",
-      "n:  8, duration:  0.010 seconds\n",
-      "n:  9, duration:  0.011 seconds\n",
-      "n: 10, duration:  0.011 seconds\n",
-      "n: 11, duration:  0.012 seconds\n",
-      "n: 12, duration:  0.013 seconds\n",
-      "n: 13, duration:  0.015 seconds\n",
-      "n: 14, duration:  0.015 seconds\n",
-      "n: 15, duration:  0.015 seconds\n",
-      "Calling ray.get:\n"
+      "n:  0, duration:  0.001 seconds\n",
+      "n:  1, duration:  0.001 seconds\n",
+      "n:  2, duration:  0.002 seconds\n",
+      "n:  3, duration:  0.002 seconds\n",
+      "n:  4, duration:  0.002 seconds\n",
+      "n:  5, duration:  0.003 seconds\n",
+      "n:  6, duration:  0.004 seconds\n",
+      "n:  7, duration:  0.004 seconds\n",
+      "n:  8, duration:  0.005 seconds\n",
+      "n:  9, duration:  0.006 seconds\n",
+      "n: 10, duration:  0.006 seconds\n",
+      "n: 11, duration:  0.006 seconds\n",
+      "n: 12, duration:  0.006 seconds\n",
+      "n: 13, duration:  0.006 seconds\n",
+      "n: 14, duration:  0.007 seconds\n",
+      "n: 15, duration:  0.007 seconds\n",
+      "Calling ray.get:\n",
+      "n:  0, duration:  0.000 seconds\n",
+      "n:  1, duration:  1.001 seconds\n",
+      "n:  2, duration:  2.003 seconds\n",
+      "n:  3, duration:  3.001 seconds\n",
+      "n:  4, duration:  4.001 seconds\n",
+      "n:  5, duration:  5.002 seconds\n",
+      "n:  6, duration:  6.003 seconds\n",
+      "n:  7, duration:  7.003 seconds\n",
+      "n:  8, duration:  8.001 seconds\n",
+      "n:  9, duration:  9.005 seconds\n",
+      "n: 10, duration: 10.004 seconds\n",
+      "n: 11, duration: 11.001 seconds\n",
+      "n: 12, duration: 12.001 seconds\n",
+      "n: 13, duration: 13.004 seconds\n",
+      "n: 14, duration: 14.003 seconds\n",
+      "n: 15, duration: 15.002 seconds\n",
+      "Total time: duration: 22.015 seconds\n"
      ]
     }
    ],
@@ -667,7 +697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
