Updated images in ray-core/03...

--- a/ray-core/05-ExploringRayAPICalls.ipynb
+++ b/ray-core/05-ExploringRayAPICalls.ipynb
@@ -17,6 +17,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# If you are running on Google Colab, uncomment and run the following linkes\n",
+    "# to install the necessary dependencies.\n",
+    "\n",
+    "# print(\"Setting up colab environment\")\n",
+    "# !pip install -q ray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import ray, time, sys\n",
     "sys.path.append('..')  \n",
     "from util.printing import pnd, pd"
@@ -340,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
