--- a/ray-core/05-ExploringRayAPICalls.ipynb
+++ b/ray-core/05-ExploringRayAPICalls.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,29 +37,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-04-10 15:44:15,825\tINFO resource_spec.py:204 -- Starting Ray with 4.44 GiB memory available for workers and up to 2.24 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
-      "2020-04-10 15:44:16,180\tINFO services.py:1146 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8265\u001b[39m\u001b[22m\n"
+      "2020-04-11 17:48:23,790\tINFO resource_spec.py:212 -- Starting Ray with 4.59 GiB memory available for workers and up to 2.3 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
+      "2020-04-11 17:48:24,146\tINFO services.py:1148 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8266\u001b[39m\u001b[22m\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "{'node_ip_address': '192.168.1.149',\n",
-       " 'redis_address': '192.168.1.149:57935',\n",
-       " 'object_store_address': '/tmp/ray/session_2020-04-10_15-44-15_817580_64670/sockets/plasma_store',\n",
-       " 'raylet_socket_name': '/tmp/ray/session_2020-04-10_15-44-15_817580_64670/sockets/raylet',\n",
-       " 'webui_url': 'localhost:8265',\n",
-       " 'session_dir': '/tmp/ray/session_2020-04-10_15-44-15_817580_64670'}"
+       " 'redis_address': '192.168.1.149:15707',\n",
+       " 'object_store_address': '/tmp/ray/session_2020-04-11_17-48-23_781510_92557/sockets/plasma_store',\n",
+       " 'raylet_socket_name': '/tmp/ray/session_2020-04-11_17-48-23_781510_92557/sockets/raylet',\n",
+       " 'webui_url': 'localhost:8266',\n",
+       " 'session_dir': '/tmp/ray/session_2020-04-11_17-48-23_781510_92557'}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "1073741824"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -243,11 +243,11 @@
       "\n",
       "ray.get_gpu_ids():          []\n",
       "ray.get_resource_ids():     {}\n",
-      "ray.get_webui_url():        localhost:8265\n",
-      "ray.nodes():                [{'NodeID': '012998ca03a31e9cc2c7db08d06ead2101db46c0', 'Alive': True, 'NodeManagerAddress': '192.168.1.149', 'NodeManagerHostname': 'DWAnyscaleMBP.local', 'NodeManagerPort': 53331, 'ObjectManagerPort': 53362, 'ObjectStoreSocketName': '/tmp/ray/session_2020-04-10_15-44-15_817580_64670/sockets/plasma_store', 'RayletSocketName': '/tmp/ray/session_2020-04-10_15-44-15_817580_64670/sockets/raylet', 'Resources': {'object_store_memory': 31.0, 'CPU': 8.0, 'node:192.168.1.149': 1.0, 'memory': 91.0}, 'alive': True}]\n",
-      "ray.objects():              {ObjectID(ffffffffffffffffffffffff0100008801000000): {'DataSize': 0, 'Manager': b'\\x01)\\x98\\xca\\x03\\xa3\\x1e\\x9c\\xc2\\xc7\\xdb\\x08\\xd0n\\xad!\\x01\\xdbF\\xc0'}}\n",
-      "ray.cluster_resources():    {'object_store_memory': 31.0, 'CPU': 8.0, 'node:192.168.1.149': 1.0, 'memory': 91.0}\n",
-      "ray.available_resources():  {'memory': 91.0, 'node:192.168.1.149': 1.0, 'object_store_memory': 31.0, 'CPU': 8.0}\n",
+      "ray.get_webui_url():        localhost:8266\n",
+      "ray.nodes():                [{'NodeID': '4205e012427c24e7bb8dae1a70d20d9180ba85a4', 'Alive': True, 'NodeManagerAddress': '192.168.1.149', 'NodeManagerHostname': 'DWAnyscaleMBP.local', 'NodeManagerPort': 56208, 'ObjectManagerPort': 56239, 'ObjectStoreSocketName': '/tmp/ray/session_2020-04-11_17-48-23_781510_92557/sockets/plasma_store', 'RayletSocketName': '/tmp/ray/session_2020-04-11_17-48-23_781510_92557/sockets/raylet', 'Resources': {'object_store_memory': 32.0, 'CPU': 8.0, 'node:192.168.1.149': 1.0, 'memory': 94.0}, 'alive': True}]\n",
+      "ray.objects():              {ObjectID(ffffffffffffffffffffffff0100008801000000): {'DataSize': 0, 'Manager': b'B\\x05\\xe0\\x12B|$\\xe7\\xbb\\x8d\\xae\\x1ap\\xd2\\r\\x91\\x80\\xba\\x85\\xa4'}}\n",
+      "ray.cluster_resources():    {'object_store_memory': 32.0, 'CPU': 8.0, 'node:192.168.1.149': 1.0, 'memory': 94.0}\n",
+      "ray.available_resources():  {'memory': 94.0, 'node:192.168.1.149': 1.0, 'object_store_memory': 32.0, 'CPU': 8.0}\n",
       "ray.errors():               {}\n",
       "\n"
      ]
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "8.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
