--- a/ray-core/solutions/Solutions.ipynb
+++ b/ray-core/solutions/Solutions.ipynb
@@ -258,6 +258,15 @@
     "assert squares == [0, 1, 4, 9]\n",
     "assert duration < 4.1, f'duration = {duration}' "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 4 in 04-DistributedStateWithActors\n",
+    "\n",
+    "TBD"
+   ]
   }
  ],
  "metadata": {
@@ -276,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
