Finished first draft of Ray Core tutorial

--- a/ray-core/02-TaskParallelism-Part1.ipynb
+++ b/ray-core/02-TaskParallelism-Part1.ipynb
@@ -216,7 +216,7 @@
    "source": [
     "If `ray.init()` worked successfully, you'll see a JSON block with information such as the `node_ip_address` and `webui_rul`. \n",
     "\n",
-    "A separate message tells you that URL is for the Ray dashboard. Open it now in a separate browser tab. It should look something like this:\n",
+    "A separate message tells you that URL is for the [Ray Dashboard](https://ray.readthedocs.io/en/latest/ray-dashboard.html#ray-dashboard). Open it now in a separate browser tab. It should look something like this:\n",
     "![Ray Dashboard screenshot](../images/Ray-Dashboard.png)"
    ]
   },
