--- a/ray-core/05-ExploringRayAPICalls.ipynb
+++ b/ray-core/05-ExploringRayAPICalls.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Exploring Ray API Calls\n",
     "\n",
-    "To finish our tutorial on the core features of Ray, this lesson explores a few of the other API calls you might find useful, as well as options that can be used with the API calls we've already learned.\n",
+    "This lesson explores a few of the other API calls you might find useful, as well as options that can be used with the API calls we've already learned. If you are pressed for time, consider skipping this lesson now and proceeding to the recap lesson [06-RecapTipsTricks](06-RecapAndTipsTricks.ipynb).\n",
     "\n",
     "> **Tip:** The [Ray Package Reference](https://ray.readthedocs.io/en/latest/package-ref.html) in the [Ray Docs](https://ray.readthedocs.io/en/latest/) is useful for exploring the API features we'll learn."
    ]
