Inlined the printing functions and an image to better work in Colab

--- a/ray-core/02-TaskParallelism-Part1.ipynb
+++ b/ray-core/02-TaskParallelism-Part1.ipynb
@@ -41,15 +41,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ray, time, sys\n",
-    "sys.path.append('..')    # Import our own libraries starting in the project root directory"
+    "import ray, time, sys"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We've implemented convenience functions `pnd()` and `pd()` for printing a number and time duration or a number, respectively. They also take an optional `prefix` argument for the beginning of the line. They are in a library, so we can just import them, since we set the `sys.path` above. You'll see them used shortly."
+    "Here are some convenience functions `pnd()` and `pd()` for printing a number and time duration or a number, respectively. They also take an optional `prefix` argument for the beginning of the line."
    ]
   },
   {
@@ -58,7 +57,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from util.printing import pnd, pd"
+    "def pnd(n, duration, prefix=''):\n",
+    "    \"\"\"Print an integer and a time duration, with an optional prefix.\"\"\"\n",
+    "    prefix2 = prefix if len(prefix) == 0 else prefix+' '\n",
+    "    print('{:s}n: {:2d}, duration: {:6.3f} seconds'.format(prefix2, n, duration))\n",
+    "\n",
+    "def pd(duration, prefix=''):\n",
+    "    \"\"\"Print a time duration, with an optional prefix.\"\"\"\n",
+    "    prefix2 = prefix if len(prefix) == 0 else prefix+' '\n",
+    "    print('{:s}duration: {:6.3f} seconds'.format(prefix2, duration))"
    ]
   },
   {
@@ -574,7 +581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The final number will be `4.0`, `8.0`, `16.0`, etc. The next cell is one of our previous examples of calling `expensive_task`, but now the loop counter is `2*int(num_cpus)` instead of `5`. This will mean that half of the tasks will have to wait for an open slot. Now run the following cell and watch the Ray dashboard. (You'll know the cell is finished when all the `ray` workers return to `IDLE`.)\n",
+    "The final number will be `2.0`, `4.0`, `8.0`, `16.0`, etc. The next cell is one of our previous examples of calling `expensive_task`, but now the loop counter is `2*int(num_cpus)` instead of `5`. This will mean that half of the tasks will have to wait for an open slot. Now run the following cell and watch the Ray dashboard. (You'll know the cell is finished when all the `ray` workers return to `IDLE`.)\n",
     "\n",
     "What's the total time now? How about the individual times?"
    ]
