--- a/ray-core/03-TaskParallelism-Part2.ipynb
+++ b/ray-core/03-TaskParallelism-Part2.ipynb
@@ -36,10 +36,24 @@
     "# Imports and initialize Ray. We're adding NumPy for the examples and the tutorial `util` library:\n",
     "\n",
     "import ray, time, sys    # New notebook, so new process\n",
-    "import numpy as np       # Used for examples\n",
-    "sys.path.append('..')    # Import our own libraries starting in the project root directory\n",
+    "import numpy as np       # Used for examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pnd(n, duration, prefix=''):\n",
+    "    \"\"\"Print an integer and a time duration, with an optional prefix.\"\"\"\n",
+    "    prefix2 = prefix if len(prefix) == 0 else prefix+' '\n",
+    "    print('{:s}n: {:2d}, duration: {:6.3f} seconds'.format(prefix2, n, duration))\n",
     "\n",
-    "from util.printing import pnd, pd"
+    "def pd(duration, prefix=''):\n",
+    "    \"\"\"Print a time duration, with an optional prefix.\"\"\"\n",
+    "    prefix2 = prefix if len(prefix) == 0 else prefix+' '\n",
+    "    print('{:s}duration: {:6.3f} seconds'.format(prefix2, duration))"
    ]
   },
   {
@@ -1213,7 +1227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here's a static image from a test run, in case the Bokeh plot isn't working:\n",
+    "Here's a static image from a test run, in case the Bokeh plot isn't working. Your results may look a lot different!\n",
     "![Execution Times: Local versus Remote](../images/Execution-Times-Local-v-Remote.png)"
    ]
   },
