--- a/ray-core/04-DistributedStateWithActors.ipynb
+++ b/ray-core/04-DistributedStateWithActors.ipynb
@@ -55,7 +55,8 @@
     "# to install the necessary dependencies.\n",
     "\n",
     "# print(\"Setting up colab environment\")\n",
-    "# !pip install -q ray"
+    "# !pip install -q ray\n",
+    "# !pip install -q holoviews bokeh"
    ]
   },
   {
@@ -66,11 +67,24 @@
    "source": [
     "import ray, time, sys    # New notebook, so new process\n",
     "import numpy as np       # Used for examples\n",
-    "import os\n",
-    "root=os.path.abspath('..')\n",
-    "sys.path.append(root)    # Import our own libraries starting in the project root directory\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pnd(n, duration, prefix=''):\n",
+    "    \"\"\"Print an integer and a time duration, with an optional prefix.\"\"\"\n",
+    "    prefix2 = prefix if len(prefix) == 0 else prefix+' '\n",
+    "    print('{:s}n: {:2d}, duration: {:6.3f} seconds'.format(prefix2, n, duration))\n",
     "\n",
-    "from util.printing import pnd, pd"
+    "def pd(duration, prefix=''):\n",
+    "    \"\"\"Print a time duration, with an optional prefix.\"\"\"\n",
+    "    prefix2 = prefix if len(prefix) == 0 else prefix+' '\n",
+    "    print('{:s}duration: {:6.3f} seconds'.format(prefix2, duration))"
    ]
   },
   {
@@ -1851,7 +1865,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(If you can't see the Bokeh graph at all or the example doesn't work, <a href=\"../images/ConwaysGameOfLife-Snapshot.png\" target=\"cgol\">here's a snapshot image of one step of one run</a>.)"
+    "> **Note:** For Google Colab users, it doesn't appear that this Holoviews graph appears, unfortunately.\n",
+    "\n",
+    "If you can't see the Bokeh graph at all or the example doesn't work, here is a snapshot image of one step of one run:\n",
+    "![Conway's Game of Life - Snapshot](../images/ConwaysGameOfLife-Snapshot.png)"
    ]
   },
   {
@@ -1995,7 +2012,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(If you can't see the Bokeh graph at all or the example doesn't work, <a href=\"../images/ConwaysGameOfLife-Grid-Snapshot.png\" target=\"cgol\">here's a snapshot image of one step of one run</a>.)"
+    "If you can't see the Bokeh graph at all or the example doesn't work, here's a snapshot:\n",
+    "![Conway's Game of Life, Grid - Snapshot](../images/ConwaysGameOfLife-Grid-Snapshot.png)"
    ]
   },
   {
@@ -2287,6 +2305,13 @@
     "    for j in range(y_grid):\n",
     "        gridspace2[i,j] = ray_games_dmaps[i+j][1]  # put the dmap in the grid\n",
     "gridspace2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(If you can't see see the plot, it looks the same as the previous grid plot.)"
    ]
   },
   {
