--- a/ray-core/05-ExploringRayAPICalls.ipynb
+++ b/ray-core/05-ExploringRayAPICalls.ipynb
@@ -30,9 +30,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ray, time, sys\n",
-    "sys.path.append('..')  \n",
-    "from util.printing import pnd, pd"
+    "import ray, time, sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pnd(n, duration, prefix=''):\n",
+    "    \"\"\"Print an integer and a time duration, with an optional prefix.\"\"\"\n",
+    "    prefix2 = prefix if len(prefix) == 0 else prefix+' '\n",
+    "    print('{:s}n: {:2d}, duration: {:6.3f} seconds'.format(prefix2, n, duration))\n",
+    "\n",
+    "def pd(duration, prefix=''):\n",
+    "    \"\"\"Print a time duration, with an optional prefix.\"\"\"\n",
+    "    prefix2 = prefix if len(prefix) == 0 else prefix+' '\n",
+    "    print('{:s}duration: {:6.3f} seconds'.format(prefix2, duration))"
    ]
   },
   {
