--- a/ray-core/solutions/Solutions.ipynb
+++ b/ray-core/solutions/Solutions.ipynb
@@ -21,9 +21,24 @@
    "outputs": [],
    "source": [
     "import ray, time, sys\n",
-    "import numpy as np\n",
-    "sys.path.append('../..')\n",
-    "from util.printing import pnd, pd"
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pnd(n, duration, prefix=''):\n",
+    "    \"\"\"Print an integer and a time duration, with an optional prefix.\"\"\"\n",
+    "    prefix2 = prefix if len(prefix) == 0 else prefix+' '\n",
+    "    print('{:s}n: {:2d}, duration: {:6.3f} seconds'.format(prefix2, n, duration))\n",
+    "\n",
+    "def pd(duration, prefix=''):\n",
+    "    \"\"\"Print a time duration, with an optional prefix.\"\"\"\n",
+    "    prefix2 = prefix if len(prefix) == 0 else prefix+' '\n",
+    "    print('{:s}duration: {:6.3f} seconds'.format(prefix2, duration))"
    ]
   },
   {
